tests/out/error/import/shadowing.in.bt
import os

fun foo(os i32) {}

os := 'foo'
